--- a/src/app/template-forms-example/forms-example.component.html
+++ b/src/app/template-forms-example/forms-example.component.html
@@ -1,5 +1,5 @@
 <section ngForm #templateForm="ngForm">
-  <input #name="ngModel" autocomplete="off" type="search" placeholder="Name" required minlength="5" [(ngModel)]="formData.name " name="name">
+  <input #name="ngModel" appServerNameValidation="Slava" autocomplete="off" type="search" placeholder="Name" required minlength="3" [(ngModel)]="formData.name " name="name">
   <input autocomplete="off"  [disabled]="true" type="search" placeholder="Last Name" minlength="50" [(ngModel)]="formData.lastName" name="lastName">
   <input type="number" placeholder="Tel." [(ngModel)]="formData.tel" name="tel">
   <input type="email" placeholder="Email"  [(ngModel)]="formData.nickName" name="email">
